--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@
 *::after {
   box-sizing: border-box;
 }
+body {
+  max-width: 1600px;
+  margin: 0 auto;
+}
 .body-font {
   font-family: "Roboto", "Raleway", sans-serif;
   color: var(--font-color);
@@ -190,8 +194,7 @@ h2 {
 }
 .buttons-portfolio {
   margin-right: 8px;
-  width: 93px;
-  height: 38px;
+  padding: 6px 22px;
   background: #f5f4fa;
   border-radius: 4px;
   text-align: center;
@@ -260,9 +263,11 @@ h2 {
 }
 .h1-background {
   background-color: var(--background-color);
-  background-image: url("../images/backgroundh1.jpg");
-  background-image: linear-gradient(#2f303a 40%);
-  max-width: 1600px;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/backgroundh1.jpg");
 }
 .section {
   padding-top: 94px;
@@ -319,9 +324,7 @@ h2 {
   cursor: pointer;
 }
 .list-box-portfolio-item-text {
-  padding-left: 24px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
@@ -329,7 +332,7 @@ h2 {
 .buttons-portfolio-box {
   display: flex;
   justify-content: center;
-  padding-bottom: 34px;
+  padding-bottom: 50px;
 }
 .header-line {
   border-bottom: 1px solid #e5e5e5;
@@ -360,10 +363,12 @@ img {
   --color4: currentcolor;
   color: #afb1b8;
 }
-.social-media-item-icon:hover {
+.social-media-item-icon:hover,
+.social-media-item-icon:focus {
   cursor: pointer;
   color: #ffffff;
   background-color: var(--brand-color);
+  outline: none;
 }
 .social-media-item {
   margin-right: 10px;
@@ -398,10 +403,12 @@ img {
   color: #ffffff;
   background-color: rgba(255, 255, 255, 0.1);
 }
-.social-media-item-icon-footer:hover {
+.social-media-item-icon-footer:hover,
+.social-media-item-icon-footer:focus {
   cursor: pointer;
   color: #ffffff;
   background-color: var(--brand-color);
+  outline: none;
 }
 .customer-list {
   border: 1px solid #afb1b8;
@@ -409,18 +416,18 @@ img {
   width: 170px;
   height: 92px;
 }
-.customer-list:hover {
-  border: 1px solid var(--brand-color);
-}
 .customer-box-item {
   display: flex;
   justify-content: center;
   --color4: currentcolor;
   color: #afb1b8;
 }
-.customer-box-item:hover {
+.customer-box-item:hover,
+.customer-box-item:focus {
   color: var(--brand-color);
   cursor: pointer;
+  border: 1px solid var(--brand-color);
+  outline: none;
 }
 .backdrop {
   position: fixed;
@@ -457,17 +464,4 @@ img {
   width: 528px;
   height: 581px;
   transform: translate(-50%, -50%);
-}
-.what-we-do-description {
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  position: absolute;
-  background-color: rgba(47, 48, 58, 0.8);
-  color: #ffffff;
-}
-.what-we-do-description-box {
-  position: relative;
 }
