--- a/css/style.css
+++ b/css/style.css
@@ -463,5 +463,68 @@ img {
   border-radius: 4px;
   width: 528px;
   height: 581px;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+.what-we-do-box {
+  position: relative;
+}
+.what-we-do-paragraph {
+  background: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  top: 224px;
+  color: #ffffff;
+  padding: 27px 90px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+}
+.blue-window-portfolio-box-one {
+  position: relative;
+  width: 370px;
+  height: 294px;
+  margin: 0px;
+  overflow: hidden;
+}
+.blue-window-portfolio-box-one:hover .blue-window-portfolio-box-two,
+.blue-window-portfolio-box-one:focus .blue-window-portfolio-box-two {
+  transform: translateY(0);
+}
+.blue-window-portfolio-box-two {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.blue-window-portfolio-box-two > p {
+  font-size: 18px;
+  line-height: 1.55;
+  margin: 0px;
+  padding: 49px 24px;
+  color: #ffffff;
+  letter-spacing: 0.03em;
+}
+.nav-link-active {
+  position: relative;
+  color: var(--brand-color);
+}
+.nav-link-active::after {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 43px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--brand-color);
+  border-radius: 2px;
 }
