--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,11 @@ img {
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+}
+.close-button:hover,
+.close-button:focus {
+  border: 1px solid red;
+  color: red;
   cursor: pointer;
 }
 .modal {
@@ -521,8 +526,9 @@ img {
   content: "";
   position: absolute;
   display: block;
-  top: 43px;
+  top: 46px;
   left: 0;
+  bottom: 0;
   width: 100%;
   height: 4px;
   background-color: var(--brand-color);
